--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^6.0.8",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
